PrerenderingOffliner will abort background load if it sees chrome transitioning to foreground on low-end devices. Also adds new FOREGROUND_CANCELED request status (and histogram enum value).

BUG=627884,622508

Review-Url: https://codereview.chromium.org/2149773002
Cr-Commit-Position: refs/heads/master@{#406565}

Former-commit-id: 93ec7def5cee33305155e15131c439d23ddceb0d